<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="24dp"
        tools:context=".LoginActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvWelcomeBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:layout_marginTop="64dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvSignInQuote"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <TextView
                    android:id="@+id/tvSignInQuote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_signin_to_your_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    style="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toTopOf="@+id/tfPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignInQuote"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#9E9E9E"
                        android:contentDescription="@string/email"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tfEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/login"
                    app:layout_constraintBottom_toTopOf="@+id/iconBtnGoogleLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tfPassword" />

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/signup"
                    app:layout_constraintEnd_toEndOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="@+id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <Button
                    android:id="@+id/iconBtnGoogleLogin"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawableLeft="@drawable/icon_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iconBtnLinkedLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/iconBtnLinkedLogin"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_linkedin"
                    app:layout_constraintBottom_toBottomOf="@+id/iconBtnGoogleLogin"
                    app:layout_constraintEnd_toStartOf="@+id/iconBtnGithubLogin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iconBtnGoogleLogin"
                    app:layout_constraintTop_toTopOf="@+id/iconBtnGoogleLogin"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/iconBtnGithubLogin"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_github"
                    app:layout_constraintBottom_toBottomOf="@+id/iconBtnLinkedLogin"
                    app:layout_constraintEnd_toStartOf="@+id/iconBtnFacebookLogin"
                    app:layout_constraintStart_toEndOf="@+id/iconBtnLinkedLogin"
                    app:layout_constraintTop_toTopOf="@+id/iconBtnLinkedLogin"
                    app:layout_constraintVertical_bias="0.291"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/iconBtnFacebookLogin"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_facebook"
                    app:layout_constraintBottom_toBottomOf="@+id/iconBtnGithubLogin"
                    app:layout_constraintEnd_toStartOf="@+id/iconBtnAzureLogin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iconBtnGithubLogin"
                    app:layout_constraintTop_toTopOf="@+id/iconBtnGithubLogin"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/iconBtnAzureLogin"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_azure"
                    app:layout_constraintBottom_toBottomOf="@+id/iconBtnFacebookLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iconBtnFacebookLogin"
                    app:layout_constraintTop_toTopOf="@+id/iconBtnFacebookLogin"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>